rubocop/examples/bad/Style_SpaceAfterComma.rb
# TODO: Checks for comma (,) not followed by some kind of space.
